test/semantics/programs/invalid/invalid-operation1.guav
# Should fail since incompatible operand types

x = "string" + 3
